--- a/main.html
+++ b/main.html
@@ -7,7 +7,31 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<marquee>Welcome to Accio Jobs!</marquee>
+	<br>
+
+	<a href="Accio Jobs's Blog"><h1>Accio Job's Blog</h1></a>
+	<br>
+
+	<div>
+		<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000">
+		<a href="Brute Force vs. Optimization"><h1>Brute Force vs. Optimization</h1></a>
+		<p>We can say that optimization is one step further than the brute-force method of....</p>
+	</div>
+	
+	<div>
+		<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000">
+		<a href="DSA vs. Competitive Programming"><h1>DSA vs. Competitive Programming</h1></a>
+		<p>DSA or Competitive programming? What is better for you?</p>
+	</div>	
+	
+	<div>
+		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png">
+		<a href="Complete Guide on FlexBox"><h1>Complete Guide on FlexBox</h1></a>
+		<p>CSS Flexbox is a layout model that allows elements within a container to be...</p>
+	</div>
+
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
